--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 body {
     background-color: aquamarine;
+
+    font-family: Tahoma;
+    line-height: 1.5;
+    font-size: 17px;
+}
+
+.title {
+    color: rgba(221, 3, 148, 0.822);
 }
