--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+} 
+
 body {
     margin: 80px;
     background: url(../backgroundPic2.jpeg) no-repeat ;
@@ -7,11 +13,11 @@ body {
 }
 
 .card {
-    /* height: 800px; */
-    position: relative;
+    /* height: auto !important; */
+    position: absolute;
     padding: 10px;
-    /* display: inline-box; 
-    vertical-align: top; */
+    /* display: inline-block; */
+    /* vertical-align: top; */
     background-color: #fff;
     box-shadow: 0px 0px 7px 0px #aaa;
     border-radius: 10px;
@@ -20,9 +26,9 @@ body {
 .photo {
     display: block;
     border-radius: 10px;
-    margin left: 80px;
-    margin top: 100px;
-    height: 400px;
+    /* margin left: 80px; */
+    /* margin top: 100px; */
+    height: 300px;
     float: left;
     margin-right: 25px;
 
@@ -31,13 +37,13 @@ body {
 .card-title {
     font-size: 10px;
     float: left;
-    margin-top: 100px;
+    /* margin-top: 10px; */
     margin-right: 15px;
 }
 
 .list {
     font-size: 10px;
-    margin-top: 100px;
+    /* margin-top: 100px; */
     
 }
 
