--- a/style.css
+++ b/style.css
@@ -5,19 +5,26 @@
 } 
 
 body {
-    margin: 80px;
     background: url(../backgroundPic2.jpeg) no-repeat ;
     /* background-size: cover; */
     font-family: 'Times New Roman', Times, serif;
+    font-size: medium;
     line-height: 1.5;
 }
 
 .card {
-    /* height: auto !important; */
-    position: absolute;
-    padding: 10px;
+    position: fixed;
+    top: 14%;
+    left: 7%;
+    right: 7%;
+    width: 100%;
+    height: 100%;
+    bottom: 0;
+    padding: 7% 7%;
     /* display: inline-block; */
     /* vertical-align: top; */
+    width: auto;
+    height: auto;
     background-color: #fff;
     box-shadow: 0px 0px 7px 0px #aaa;
     border-radius: 10px;
@@ -25,9 +32,13 @@ body {
 
 .photo {
     display: block;
+    width: 50%;
+    min-width: 50%;
+    /* height: 50%; */
+    /* min-height: 50%; */
     border-radius: 10px;
-    /* margin left: 80px; */
-    /* margin top: 100px; */
+    /* margin-top: 100px; */
+    /* margin-left: 80px; */
     height: 300px;
     float: left;
     margin-right: 25px;
@@ -35,19 +46,26 @@ body {
 }
 
 .card-title {
-    font-size: 10px;
+    font-size: 12px;
     float: left;
-    /* margin-top: 10px; */
+    /* margin-top: 100px; */
     margin-right: 15px;
 }
 
 .list {
-    font-size: 10px;
+    font-size: 12px;
     /* margin-top: 100px; */
     
 }
 
 .card-subtitle {
-    /* margin-right: 80px; */
-    font-size: 12px;
+    margin-right: 80px;
+    font-size: 20px;
+    line-height: 1.2;
+}
+
+.card-subtitles{
+    font-size: 20pxpx;
+    line-height: 1;
+
 }
