--- a/style.css
+++ b/style.css
@@ -14,20 +14,37 @@ body {
 
 .card {
     position: fixed;
+    overflow: auto;
     top: 14%;
     left: 7%;
     right: 7%;
     width: 100%;
     height: 100%;
     bottom: 0;
-    padding: 7% 7%;
-    /* display: inline-block; */
-    /* vertical-align: top; */
+    padding: 7% 7% 0 7%;
+    display: inline-block;
+    vertical-align: top;
     width: auto;
     height: auto;
     background-color: #fff;
     box-shadow: 0px 0px 7px 0px #aaa;
     border-radius: 10px;
+}
+
+.cards {
+position:relative;
+display: inline-table;
+vertical-align: top;
+/* background-color: black; */
+height: 100px;
+float:left;
+}
+
+.myphoto {
+    display: block;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 25px;
 }
 
 .photo {
@@ -37,8 +54,6 @@ body {
     /* height: 50%; */
     /* min-height: 50%; */
     border-radius: 10px;
-    /* margin-top: 100px; */
-    /* margin-left: 80px; */
     height: 300px;
     float: left;
     margin-right: 25px;
@@ -53,19 +68,30 @@ body {
 }
 
 .list {
+    margin-bottom: 1%;
     font-size: 12px;
     /* margin-top: 100px; */
     
 }
 
 .card-subtitle {
-    margin-right: 80px;
+    text-align: left;
+    margin-bottom: 1%;
     font-size: 20px;
     line-height: 1.2;
 }
 
 .card-subtitles{
-    font-size: 20pxpx;
+    font-size: 17px;
     line-height: 1;
+}
 
+.text {
+    margin-bottom: 10.5%;
+    
+}
+
+.personal {
+    font-size: 14px;
+    line-height: 25px;
 }
