--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ float:left;
     display: block;
     height: 50px;
     border-radius: 50%;
-    margin-right: 25px;
+    margin-right: 15px;
 }
 
 .photo {
@@ -71,6 +71,7 @@ float:left;
     margin-bottom: 1%;
     font-size: 12px;
     /* margin-top: 100px; */
+    color: rgb(100, 93, 93);
     
 }
 
@@ -82,16 +83,22 @@ float:left;
 }
 
 .card-subtitles{
-    font-size: 17px;
+    font-size: 14px;
     line-height: 1;
+    /* color: rgb(100, 93, 93); */
+    color: rgb(210, 183, 32);
 }
 
 .text {
-    margin-bottom: 10.5%;
+    margin-bottom: 12.8%;
     
 }
 
 .personal {
     font-size: 14px;
     line-height: 25px;
+}
+
+.texts {
+    color: rgb(100, 93, 93);
 }
