--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 } 
 
 body {
-    background: url(file:///G:/projects/Myweb/img/3.jpeg) no-repeat ;
+    background: url(file:///G:/projects/Myweb/img/2.jpeg) no-repeat;
     /* background-size: cover; */
     font-family: 'Times New Roman', Times, serif;
     font-size: medium;
@@ -20,7 +20,7 @@ body {
     right: 7%;
     width: 100%;
     height: 100%;
-    bottom: 0;
+    /* bottom: 0; */
     padding: 7% 7% 0 7%;
     display: inline-block;
     vertical-align: top;
@@ -57,6 +57,7 @@ float:left;
     height: 300px;
     float: left;
     margin-right: 25px;
+    padding-bottom: 5%;
 
 }
 
@@ -90,7 +91,7 @@ float:left;
 }
 
 .text {
-    margin-bottom: 8%;
+    margin-bottom: 3%;
     
 }
 
