--- a/style.css
+++ b/style.css
@@ -1,105 +1,156 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-} 
-
 body {
-    background: url(file:///G:/projects/Myweb/img/2.jpeg) no-repeat;
-    /* background-size: cover; */
-    font-family: 'Times New Roman', Times, serif;
-    font-size: medium;
-    line-height: 1.5;
+    margin: 0;
+    font-family:'Roboto', sans-serif ;
+
+    font-size: 15px;
+    line-height: 1.6;
+    color: #333;
 }
 
-.card {
-    position: fixed;
-    overflow: auto;
-    top: 14%;
-    left: 7%;
-    right: 7%;
+*,
+*:before,
+*:after {
+    box-sizing: border-box;
+}
+
+h1,h2,h3,h4,h5,h6 {
+    margin: 0;
+}
+
+/* CONTAINER */
+
+.container {
     width: 100%;
-    height: 100%;
-    /* bottom: 0; */
-    padding: 7% 7% 0 7%;
+    max-width: 1500px;
+    margin: 0 auto;
+}
+
+/* INTRO */
+
+.intro {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+    
+    background: url("file:///G:/projects/Myweb/img/2.jpeg") center no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;
+}
+
+/* SQUARE */
+
+.square {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    max-width: 1600px;
+    height: 100vh;
+    margin: 100px auto 0;
+    /* padding: 0 100px; */
+    border-radius: 15px 15px 0px 0px;
+    box-shadow: 0px 0px 7px 0px #aaa;
+    
+    background-color: #fff;
+}
+
+/* HEADER */
+
+.header {
+    width: 100%;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+}
+
+.header__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding: 125px 50px 0;
+}
+
+.header__logo {
+    font-size: 30px;
+    color: #333;
+    font-family: 'Dancing Script', cursive;
+}
+
+/* NAV */
+
+.nav {
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    text-transform: none;
+}
+
+.nav__link {
     display: inline-block;
     vertical-align: top;
-    width: auto;
-    height: auto;
-    background-color: #fff;
-    box-shadow: 0px 0px 7px 0px #aaa;
-    border-radius: 10px;
+    margin: 0px 15px;
+    position: relative;
+
+    color: #333;
+    text-decoration: none;
+    opacity: 0.5;
+
+    transition: opacity 0.1s linear;
 }
 
-.cards {
-position:relative;
-display: inline-table;
-vertical-align: top;
-/* background-color: black; */
-height: 100px;
-float:left;
-}
-
-.myphoto {
+.nav__link:after {
+    content: "";
     display: block;
-    height: 50px;
-    border-radius: 50%;
-    margin-right: 15px;
+    width: 100%;
+    height: 2px;
+    opacity: 0;
+
+    background-color: black;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1;
+
+    transition: opacity 0.1 linear;
 }
 
-.photo {
-    display: block;
-    width: 50%;
-    min-width: 50%;
-    /* height: 50%; */
-    /* min-height: 50%; */
-    border-radius: 10px;
-    height: 300px;
-    float: left;
-    margin-right: 25px;
-    padding-bottom: 5%;
-
+.nav__link:hover {
+    opacity: 1;
 }
 
-.card-title {
-    font-size: 12px;
-    float: left;
-    /* margin-top: 100px; */
-    margin-right: 15px;
+.nav__link:hover:after,
+.nav__link.active:after {
+    opacity: 0.3;
 }
 
-.list {
-    margin-bottom: 1%;
-    font-size: 12px;
-    /* margin-top: 100px; */
-    color: rgb(100, 93, 93);
-    
+.nav__link.active {
+    opacity: 1; 
 }
 
-.card-subtitle {
-    text-align: left;
-    margin-bottom: 1%;
-    font-size: 20px;
-    line-height: 1.2;
-}
+/* BUTTON */
 
-.card-subtitles{
+.btn {
+    display: inline-block;
+    vertical-align: top;
+    padding: 5px 15px;
+    margin: 0 0 0 30px;
+
     font-size: 14px;
-    line-height: 1;
-    /* color: rgb(100, 93, 93); */
-    color: rgb(210, 183, 32);
+    color: #fff;
+    text-decoration: none;
+
+    background-color: rgb(255, 140, 119);
+    border-radius: 3px;
+    box-shadow: 0px 0px 3px 0px #aaa;
+
+    transition: opacity 0.1s linear;
 }
 
-.text {
-    margin-bottom: 3%;
-    
-}
-
-.personal {
-    font-size: 14px;
-    line-height: 25px;
-}
-
-.texts {
-    color: rgb(100, 93, 93);
+.btn:hover {
+    opacity: 0.8;
 }
