--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     font-family:'Roboto', sans-serif ;
 
     font-size: 15px;
-    line-height: 1.6;
+    line-height: 1.4;
     color: #333;
 }
 
@@ -22,7 +22,9 @@ h1,h2,h3,h4,h5,h6 {
 .container {
     width: 100%;
     max-width: 1500px;
+    height: 100%;
     margin: 0 auto;
+    padding: 0 50px ;
 }
 
 /* INTRO */
@@ -33,7 +35,8 @@ h1,h2,h3,h4,h5,h6 {
     justify-content: center;
     width: 100%;
     height: 100vh;
-    
+    min-width: 800px;
+    min-height: 800px ;
     background: url("file:///G:/projects/Myweb/img/2.jpeg") center no-repeat;
     -webkit-background-size: cover;
     background-size: cover;
@@ -47,9 +50,11 @@ h1,h2,h3,h4,h5,h6 {
     justify-content: center;
     width: 100%;
     max-width: 1600px;
+    min-width: 800px;
+    min-height: 800px;
     height: 100vh;
     margin: 100px auto 0;
-    /* padding: 0 100px; */
+    padding: 40px 0 0;
     border-radius: 15px 15px 0px 0px;
     box-shadow: 0px 0px 7px 0px #aaa;
     
@@ -61,18 +66,19 @@ h1,h2,h3,h4,h5,h6 {
 .header {
     width: 100%;
 
-    position: absolute;
-    top: 0;
+    /* position: absolute;
+
+    top: 125px;
     left: 0;
     right: 0;
-    z-index: 1000;
+    z-index: 1000; */
 }
 
 .header__inner {
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
-    padding: 125px 50px 0;
+    align-items: baseline;
+    margin: 0 0 50px;
 }
 
 .header__logo {
@@ -154,3 +160,89 @@ h1,h2,h3,h4,h5,h6 {
 .btn:hover {
     opacity: 0.8;
 }
+
+/* ABOUT */
+
+.about {
+    width: 100%;
+
+    display: flex;
+    align-items:center;
+}
+
+.about__head {
+    display: flex;
+    align-items: center;
+    margin: -10px 0 0;
+}
+
+
+.about__imgs {
+    width: 100%;
+    max-width: 700px;
+    min-width: 300px;
+    /* max-width: 1000px; */
+    height: 100%;
+    max-height: 300px;
+    min-height: 300px;
+
+    margin: 0 30px 0 0;
+    border-radius: 10px;
+}
+
+.about__suptitle {
+    font-size: 12px;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+.about__list {
+    padding-left: 7px;
+    list-style-position: inside;
+    font-size: 12px;
+    opacity: 0.7;
+}
+
+.about__title {
+    font-size: 25px;
+    text-align: justify;
+}
+
+.about__text {
+    font-size: 16px;
+    line-height: 1.7;
+    opacity: 0.7;
+    text-align: justify;
+
+    margin: 0 0 65px;
+}
+
+.about__my {
+    display: flex;
+
+    align-items: center;
+
+}
+
+.about__myimg {
+    width: 100%;
+    max-width: 60px;
+
+    border-radius: 50%;
+    margin: 0 20px 0 0;
+
+}
+
+.about__myheader {
+    line-height: 1.5;
+}
+
+.about__myinf {
+    font-size: 14px;
+}
+
+.about__myinfs {
+    font-size: 14px;
+    margin: 0 ;
+}
+
