--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ h1,h2,h3,h4,h5,h6 {
     width: 100%;
     max-width: 1500px;
     height: 100%;
+    max-height: 400px;
     margin: 0 auto;
     padding: 0 50px ;
 }
@@ -34,9 +35,9 @@ h1,h2,h3,h4,h5,h6 {
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    height: 100vh;
+    height:100vh;
     min-width: 800px;
-    min-height: 800px ;
+    min-height: 1000px;
     background: url("file:///G:/projects/Myweb/img/2.jpeg") center no-repeat;
     -webkit-background-size: cover;
     background-size: cover;
@@ -53,6 +54,7 @@ h1,h2,h3,h4,h5,h6 {
     min-width: 800px;
     min-height: 800px;
     height: 100vh;
+
     margin: 100px auto 0;
     padding: 40px 0 0;
     border-radius: 15px 15px 0px 0px;
@@ -246,3 +248,70 @@ h1,h2,h3,h4,h5,h6 {
     margin: 0 ;
 }
 
+/* DEV */
+
+.dev {
+    display: flex;
+}
+
+.dev__item {
+    display: flex; 
+
+
+    max-width: 700px;
+    height: 300px;
+    width: 100%;
+
+    /* background-color: #b5eae0;  */
+}
+
+.dev__item__2 {
+    display: flex; 
+    
+
+    max-width: 700px;
+    height: 300px;
+    width: 100%;
+    margin-left: 30px;
+}
+
+.dev__img {
+    display: flex;
+
+    align-items: center;
+    width: 100%;
+    max-height: 300px;
+    max-width: 350px;
+}
+
+.dev__img__2 {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    max-height: 300px;
+    max-width: 274px;
+}
+
+.dev__imgs {
+    width: 100%;
+    height: 100%;
+}
+
+.dev__imgs__2 {
+    width: 100%;
+    height: 90%;
+    border-radius: 50%;
+}
+
+.dev__it {
+    width: 100%;
+    max-width: 350px;
+    height: 300px;
+    margin: 7px 0 0 30px;
+}
+
+.dev__it__2 {
+    width: 100%;
+    height: 300px;
+    margin: 7px 0 0 30px;
+}
