--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h1,h2,h3,h4,h5,h6 {
     width: 100%;
     max-width: 1500px;
     height: 100%;
-    max-height: 400px;
+    /* max-height: 400px; */
     margin: 0 auto;
     padding: 0 50px ;
 }
@@ -37,7 +37,7 @@ h1,h2,h3,h4,h5,h6 {
     width: 100%;
     height:100vh;
     min-width: 800px;
-    min-height: 1000px;
+    /* min-height: 1000px; */
     background: url("file:///G:/projects/Myweb/img/2.jpeg") center no-repeat;
     -webkit-background-size: cover;
     background-size: cover;
@@ -52,10 +52,10 @@ h1,h2,h3,h4,h5,h6 {
     width: 100%;
     max-width: 1600px;
     min-width: 800px;
-    min-height: 1000px;
+    /* min-height: 1000px; */
     height: 100vh;
 
-    margin: 100px auto 0;
+    margin: 100px auto 0px;
     padding: 40px 0 0;
     border-radius: 15px 15px 0px 0px;
     box-shadow: 0px 0px 7px 0px #aaa;
@@ -252,6 +252,8 @@ h1,h2,h3,h4,h5,h6 {
 
 .dev {
     display: flex;
+
+    margin: 0 0 0 0;
 }
 
 .dev__item {
